# Hyku

./: README.md
desktop/: index.html  package.json  tailwind.config.cjs
desktop/src/: App.tsx
desktop/src-tauri/: tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src-tauri/src/app_commands/: mod.rs  sys_tray.rs
desktop/src/components/: CopiedTextItem.tsx
desktop/src/core/: index.ts
server/: Cargo.toml
server/src/: conn.rs  main.rs  models.rs
servertwo/: Cargo.toml
servertwo/src/: controllers.rs  main.rs  models.rs  routes.rs  ws.rs
web/: package.json  tsconfig.json
web/public/: manifest.json
web/src/: App.tsx
web/src/chrome/: background.ts
web/src/routes/: Home.tsx
web/src/types/: index.d.ts
web/src/utils/: constants.ts  port.ts
